--- a/MagicChessPuzzles/MagicChessPuzzles/MagicChessPuzzles.csproj
+++ b/MagicChessPuzzles/MagicChessPuzzles/MagicChessPuzzles.csproj
@@ -108,6 +108,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CardCatalog.cs" />
+    <Compile Include="Effect.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="GameState.cs" />
     <Compile Include="InputState.cs" />
@@ -115,11 +116,15 @@
     <Compile Include="LayeredImage.cs" />
     <Compile Include="LevelScript.cs" />
     <Compile Include="Minion.cs" />
+    <Compile Include="Permanent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="Property.cs" />
+    <Compile Include="Resource.cs" />
     <Compile Include="SpellCard.cs" />
     <Compile Include="SpriteAnimation.cs" />
+    <Compile Include="Trigger.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
